several new posts; new CSL, which finally works with the version of pandoc installed in a Fedora install

--- a/_biblio/blog-biblio.bib
+++ b/_biblio/blog-biblio.bib
@@ -780,3 +780,122 @@ In the present paper, the "principal axes" technique of factor analysis is appli
   doi     = "10.1890/03-0021"
 }
 
+@ARTICLE{Kleiber2016-pt,
+  title         = "Visualizing Count Data Regressions Using Rootograms",
+  author        = "Kleiber, Christian and Zeileis, Achim",
+  month         =  "4~" # may,
+  year          =  2016,
+  archivePrefix = "arXiv",
+  eprint        = "1605.01311",
+  primaryClass  = "stat.AP",
+  arxivid       = "1605.01311"
+}
+
+
+@BOOK{Ruppert2003-pt,
+  title     = "Semiparametric Regression",
+  author    = "Ruppert, David and Wand, M P and Carroll, R J",
+  publisher = "Cambridge University Press",
+  month     =  "14~" # jul,
+  year      =  2003,
+  language  = "en",
+  isbn      = "9780521780506"
+}
+
+@ARTICLE{Nychka1988-rz,
+  title   = "Bayesian Confidence Intervals for Smoothing Splines",
+  author  = "Nychka, Douglas",
+  journal = "Journal of the American Statistical Association",
+  volume  =  83,
+  number  =  404,
+  pages   = "1134--1143",
+  year    =  1988,
+  eprint  = "http://amstat.tandfonline.com/doi/pdf/10.1080/01621459.1988.10478711",
+  issn    = "0162-1459",
+  doi     = "10.1080/01621459.1988.10478711"
+}
+
+@ARTICLE{Marra2012-bq,
+  title     = "Coverage Properties of Confidence Intervals for Generalized
+               Additive Model Components",
+  author    = "Marra, Giampiero and Wood, Simon N",
+  journal   = "Scandinavian journal of statistics, theory and applications",
+  publisher = "Blackwell Publishing Ltd",
+  volume    =  39,
+  number    =  1,
+  pages     = "53--74",
+  month     =  "1~" # mar,
+  year      =  2012,
+  keywords  = "Bayesian confidence interval, generalized additive model,
+               penalized regression spline",
+  issn      = "0303-6898",
+  doi       = "10.1111/j.1467-9469.2011.00760.x"
+}
+
+
+@ARTICLE{Marra2011-sf,
+  title    = "Practical variable selection for generalized additive models",
+  author   = "Marra, Giampiero and Wood, Simon N",
+  journal  = "Computational statistics \& data analysis",
+  volume   =  55,
+  number   =  7,
+  pages    = "2372--2387",
+  month    =  "1~" # jul,
+  year     =  2011,
+  keywords = "Generalized additive model; Nonnegative garrote estimator;
+              Penalized thin plate regression spline; Practical variable
+              selection; Shrinkage smoother",
+  issn     = "0167-9473",
+  doi      = "10.1016/j.csda.2011.02.004"
+}
+
+@ARTICLE{Taricco2009-eh,
+  title   = "Two millennia of climate variability in the Central Mediterranean",
+  author  = "Taricco, C and Ghil, M and Alessio, S and Vivaldo, G",
+  journal = "Climate of the Past",
+  volume  =  5,
+  number  =  2,
+  pages   = "171--181",
+  month   =  "4~" # may,
+  year    =  2009,
+  issn    = "1814-9324, 1814-9332",
+  doi     = "10.5194/cp-5-171-2009"
+}
+
+@ARTICLE{Taricco2016-pv,
+  title     = "A foraminiferal {$\delta$18O} record covering the last 2,200
+               years",
+  author    = "Taricco, Carla and Alessio, Silvia and Rubinetti, Sara and
+               Vivaldo, Gianna and Mancuso, Salvatore",
+  journal   = "Scientific Data",
+  publisher = "Nature Publishing Group",
+  volume    =  3,
+  pages     = "160042",
+  month     =  "6",
+  year      =  2016,
+  language  = "en",
+  issn      = "2052-4463",
+  doi       = "10.1038/sdata.2016.42"
+}
+
+@ARTICLE{Allen1996-gc,
+  title   = "Monte Carlo {SSA}: Detecting irregular oscillations in the
+             Presence of Colored Noise",
+  author  = "Allen, Myles R and Smith, Leonard A",
+  journal = "Journal of climate",
+  volume  =  9,
+  number  =  12,
+  pages   = "3373--3404",
+  year    =  1996,
+  eprint  = "http://dx.doi.org/10.1175/1520-0442(1996)009<3373:MCSDIO>2.0.CO;2",
+  issn    = "0894-8755",
+  doi     = "10.1175/1520-0442(1996)009<3373:MCSDIO>2.0.CO;2"
+}
+
+@MANUAL{pangaear-024,
+    title = {pangaear: Client for the 'Pangaea' Database},
+    author = {Scott Chamberlain and Kara Woo and Andrew MacDonald and Naupaka  Zimmerman and Gavin Simpson},
+    year = {2016},
+    note = {R package version 0.2.4},
+    url = {https://CRAN.R-project.org/package=pangaear},
+}
