--- a/_posts/2014-06-16-simultaneous-confidence-intervals-for-derivatives.Rmd
+++ b/_posts/2014-06-16-simultaneous-confidence-intervals-for-derivatives.Rmd
@@ -1,5 +1,5 @@
 --- 
-title: "Simultaneous confidence intervals for derivatives of splines in GAMs"
+title: "Confidence intervals for derivatives of splines in GAMs"
 status: publish
 layout: post
 published: true
@@ -13,6 +13,7 @@ tags:
 - "Posterior simulation"
 active: blog
 category: R
+alert: "The original version of this post claimed to produce simultaneous confidence intervals. It was wrong; these are nowhere near a simultaneous interval. For one way to compute a simltaneous interval see this [newer post](/2016/12/15/simultaneous-interval-revisited/)."
 ---
 
 ```{r, echo = FALSE, include = FALSE, cache = FALSE}
@@ -213,9 +214,9 @@ CI <- lapply(fd[1:2],
 
 `CI` is now a list with two components, each of which contains a matrix with two rows (the two probability quantiles we asked for) and 200 columns (the number of locations at which the first derivative was evaluated).
 
-There is a `plot()` method, which by default produces plots of all the terms in the model and includes the simultaneous confidence interval as well
+There is a `plot()` method, which by default produces plots of all the terms in the model and includes the ~~simultaneous~~ point-wise confidence interval as well
 
-```{r plot-deriv-method, fig="hold", results="hide", fig.cap="First derivative of the seasonal and trend splines from the CET time series additive model. The grey band is a 95% simultaneous confidence interval. Sections of the spline where the confidence interval does not include zero are indicated by coloured sections."}
+```{r plot-deriv-method, fig="hold", results="hide", fig.cap="First derivative of the seasonal and trend splines from the CET time series additive model. The grey band is a 95% ~~simultaneous~~ point-wise confidence interval. Sections of the spline where the confidence interval does not include zero are indicated by coloured sections."}
 plot(fd, sizer = TRUE)
 ```
 
@@ -224,9 +225,9 @@ plot(fd, sizer = TRUE)
 ```{r extra-actual-derivative}
 fit.fd <- fd[[2]]$deriv
 ```
-and then produce a plot with the actual derivative, the 95% simultaneous confidence interval, and 20 of the derivatives for the posterior simulations, we can use
+and then produce a plot with the actual derivative, the 95% ~~simultaneous~~ point-wise confidence interval, and 20 of the derivatives for the posterior simulations, we can use
 
-```{r plot-deriv-ci-by-hand, fig="hold", results="hide", fig.cap="First derivative of the trend spline from the CET time series additive model. The red dashed lines enclose the 95% simultaneous confidence interval. Superimposed are the first derivatives of the splines for 20 randomly selected posterior simulations from the fitted spline.", fig.height = 3.75}
+```{r plot-deriv-ci-by-hand, fig="hold", results="hide", fig.cap="First derivative of the trend spline from the CET time series additive model. The red dashed lines enclose the 95% ~~simultaneous~~ point-wise confidence interval. Superimposed are the first derivatives of the splines for 20 randomly selected posterior simulations from the fitted spline.", fig.height = 3.75}
 set.seed(76)
 take <- sample(nrow(fd[[2]]$simulations), 20)
 plot(pdat$Date, fit.fd, type = "l", ylim = range(CI[[2]]), lwd = 2)
