publications section update

--- a/publications/365papers/2016.md
+++ b/publications/365papers/2016.md
@@ -10,7 +10,7 @@ nocite: |
   @Ovaskainen2015-hn, @Ovaskainen2015-ht, @Thorson2015-jt, @Golding2016-bb, @Lyons2016-sl, @Elayouty2015-pp, @Harris2015-rt, @Harald_Baayen2016-ew, @Grace2016-fh
 ...
 
-## &#35;365papers
+## Papers read in 2016
 
 1. Ovaskainen, O., Abrego, N., Halme, P. & Dunson, D. Using latent variable models to identify large networks of species-to-species associations at different spatial scales. *Methods Ecol. Evol.* (2015). [doi: 10.1111/2041-210X.12501](http://doi.org/10.1111/2041-210X.12501)
 
