--- a/_biblio/blog-biblio.bib
+++ b/_biblio/blog-biblio.bib
@@ -1086,3 +1086,23 @@ In the present paper, the "principal axes" technique of factor analysis is appli
   issn    = "0016-7037",
   doi     = "10.1016/j.gca.2010.12.026"
 }
+
+@Article{brms-2017,
+  title = {{brms}: An {R} Package for Bayesian Multilevel Models Using {Stan}},
+  author = {Paul-Christian Bürkner},
+  journal = {Journal of Statistical Software},
+  year = {2017},
+  volume = {80},
+  number = {1},
+  pages = {1--28},
+  doi = {10.18637/jss.v080.i01},
+  encoding = {UTF-8}
+}
+
+@Manual{bayesplot-2018,
+  title = {bayesplot: Plotting for Bayesian Models},
+  author = {Jonah Gabry and Tristan Mahr},
+  year = {2018},
+  note = {R package version 1.5.0},
+  url = {https://CRAN.R-project.org/package=bayesplot},
+}
