--- a/_biblio/blog-biblio.bib
+++ b/_biblio/blog-biblio.bib
@@ -899,3 +899,288 @@ In the present paper, the "principal axes" technique of factor analysis is appli
     note = {R package version 0.2.4},
     url = {https://CRAN.R-project.org/package=pangaear},
 }
+
+@ARTICLE{Yee2007-rz,
+  title     = "Vector generalized linear and additive extreme value models",
+  author    = "Yee, Thomas W and Stephenson, Alec G",
+  journal   = "Extremes",
+  publisher = "Springer US",
+  volume    =  10,
+  number    = "1-2",
+  pages     = "1--19",
+  month     =  "8~" # jun,
+  year      =  2007,
+  language  = "en",
+  issn      = "1386-1999, 1572-915X",
+  doi       = "10.1007/s10687-007-0032-4"
+}
+
+@BOOK{Coles2001-zz,
+  title     = "An Introduction to Statistical Modeling of Extreme Values:",
+  author    = "Coles, Stuart",
+  publisher = "Springer London",
+  series    = "Springer Series in Statistics",
+  year      =  2001,
+  isbn      = "9781849968744, 9781447136750",
+  doi       = "10.1007/978-1-4471-3675-0"
+}
+
+@BOOK{Gotelli2013-wm,
+  title     = "A Primer of Ecological Statistics",
+  author    = "Gotelli, Nicholas J and Ellison, Aaron M",
+  publisher = "Sinauer Associates Inc.",
+  edition   = "second",
+  year      =  2013,
+  language  = "en",
+  isbn      = "9781605350646"
+}
+
+@ARTICLE{Dixon2005-bb,
+  title     = "Improving the Precision of Estimates of the Frequency of Rare
+               Events",
+  author    = "Dixon, Philip M and Ellison, Aaron M and Gotelli, Nicholas J",
+  journal   = "Ecology",
+  publisher = "Ecological Society of America",
+  volume    =  86,
+  number    =  5,
+  pages     = "1114--1123",
+  month     =  "1~" # may,
+  year      =  2005,
+  keywords  = "aggregation; Bayesian inference; coefficient of variation;
+               estimators; precision; rare events; regression; sampling;
+               stratification",
+  issn      = "0012-9658, 1939-9170",
+  doi       = "10.1890/04-0601"
+}
+
+
+@BOOK{Korner-Nievergelt2015-tk,
+  title     = "Bayesian Data Analysis in Ecology Using Linear Models with {R},
+               {BUGS}, and Stan",
+  author    = "Korner-Nievergelt, Franzi and von Felten, Stefanie and Roth,
+               Tobias and Gulat, Jrme and Almasi, Bettina and
+               Korner-Nievergelt, Pius",
+  publisher = "Elsevier Science \& Technology Books",
+  year      =  2015,
+  language  = "en",
+  isbn      = "9780128013700"
+}
+
+@UNPUBLISHED{Brooks2017-so,
+  title    = "Modeling {Zero-Inflated} Count Data With {glmmTMB}",
+  author   = "Brooks, Mollie E and Kristensen, Kasper and van Benthem, Koen J
+              and Magnusson, Arni and Berg, Casper W and Nielsen, Anders and
+              Skaug, Hans J and Maechler, Martin and Bolker, Benjamin M",
+  journal  = "bioRxiv",
+  pages    = "132753",
+  month    =  "1~" # may,
+  year     =  2017,
+  language = "en",
+  doi      = "10.1101/132753"
+}
+
+@ARTICLE{Price2016-no,
+  title    = "Effects of mountaintop removal mining and valley filling on the
+              occupancy and abundance of stream salamanders",
+  author   = "Price, Steven J and Muncy, Brenee' L and Bonner, Simon J and
+              Drayer, Andrea N and Barton, Christopher D",
+  journal  = "The Journal of applied ecology",
+  volume   =  53,
+  number   =  2,
+  pages    = "459--468",
+  month    =  "1~" # apr,
+  year     =  2016,
+  keywords = "amphibians; Appalachia; coal mining; hurdle model; land use;
+              mountaintop removal mining; reclamation; salamander; valley
+              filling; water quality",
+  issn     = "0021-8901, 1365-2664",
+  doi      = "10.1111/1365-2664.12585"
+}
+
+@MISC{Price2015-se,
+  title    = "Data from: Effects of mountaintop removal mining and valley
+              filling on the occupancy and abundance of stream salamanders",
+  author   = "Price, Steven J and Muncy, Brenee' L and Bonner, Simon J and
+              Drayer, Andrea N and Barton, Christopher D",
+  month    =  "28~" # dec,
+  year     =  2015,
+  doi      = "10.5061/dryad.5m8f6"
+}
+
+@ARTICLE{Roulin2007-rq,
+  title    = "Nestling barn owls beg more intensely in the presence of their
+              mother than in the presence of their father",
+  author   = "Roulin, Alexandre and Bersier, Louis-Felix",
+  journal  = "Animal behaviour",
+  volume   =  74,
+  number   =  4,
+  pages    = "1099--1106",
+  month    =  oct,
+  year     =  2007,
+  keywords = "barn owl; begging; parent--offspring conflict; parental care;
+              sexual conflict; sibling negotiation; Tyto alba",
+  issn     = "0003-3472"
+}
+
+@BOOK{Zuur2009-vg,
+  title     = "Mixed effects models and extensions in ecology with R:",
+  author    = "Zuur, Alain F and Ieno, Elena N and Walker, Neil and Saveliev,
+               Anatoly A and Smith, Graham M",
+  publisher = "Springer New York",
+  series    = "Statistics for Biology and Health",
+  year      =  2009,
+  isbn      = "9780387874579, 9780387874586",
+  doi       = "10.1007/978-0-387-87458-6"
+}
+
+@ARTICLE{Bolker2013-vl,
+  title    = "Strategies for fitting nonlinear ecological models in R, {AD}
+              Model Builder, and {BUGS}",
+  author   = "Bolker, Benjamin M and Gardner, Beth and Maunder, Mark and Berg,
+              Casper W and Brooks, Mollie and Comita, Liza and Crone, Elizabeth
+              and Cubaynes, Sarah and Davies, Trevor and de Valpine, Perry and
+              Ford, Jessica and Gimenez, Olivier and K{\'e}ry, Marc and Kim,
+              Eun Jung and Lennert-Cody, Cleridy and Magnusson, Arni and
+              Martell, Steve and Nash, John and Nielsen, Anders and Regetz, Jim
+              and Skaug, Hans and Zipkin, Elise",
+  journal  = "Methods in ecology and evolution / British Ecological Society",
+  volume   =  4,
+  number   =  6,
+  pages    = "501--512",
+  month    =  "1~" # jun,
+  year     =  2013,
+  keywords = "JAGS, optimization, parameter estimation, R, AD Model Builder,
+              WinBUGS",
+  issn     = "2041-210X",
+  doi      = "10.1111/2041-210X.12044"
+}
+
+@ARTICLE{Wood2016-fx,
+  title     = "Smoothing Parameter and Model Selection for General Smooth
+               Models",
+  author    = "Wood, Simon N and Pya, Natalya and S{\"a}fken, Benjamin",
+  journal   = "Journal of the American Statistical Association",
+  publisher = "Taylor \& Francis",
+  volume    =  111,
+  number    =  516,
+  pages     = "1548--1563",
+  month     =  "1~" # oct,
+  year      =  2016,
+  eprint    = "http://dx.doi.org/10.1080/01621459.2016.1180986",
+  issn      = "0162-1459",
+  doi       = "10.1080/01621459.2016.1180986"
+}
+
+@ARTICLE{Rose2012-pl,
+  title   = "An assessment of the mechanisms for the transfer of lead and
+             mercury from atmospherically contaminated organic soils to lake
+             sediments with particular reference to Scotland, {UK}",
+  author  = "Rose, Neil L and Yang, Handong and Turner, Simon D and Simpson,
+             Gavin L",
+  journal = "Geochimica et cosmochimica acta",
+  volume  =  82,
+  number  =  0,
+  pages   = "113--135",
+  month   =  apr,
+  year    =  2012,
+  issn    = "0016-7037",
+  doi     = "10.1016/j.gca.2010.12.026"
+}
+
+@Article{brms-2017,
+  title = {{brms}: An {R} Package for Bayesian Multilevel Models Using {Stan}},
+  author = {Paul-Christian Bürkner},
+  journal = {Journal of Statistical Software},
+  year = {2017},
+  volume = {80},
+  number = {1},
+  pages = {1--28},
+  doi = {10.18637/jss.v080.i01},
+  encoding = {UTF-8}
+}
+
+@Manual{bayesplot-2018,
+  title = {bayesplot: Plotting for Bayesian Models},
+  author = {Jonah Gabry and Tristan Mahr},
+  year = {2018},
+  note = {R package version 1.5.0},
+  url = {https://CRAN.R-project.org/package=bayesplot},
+}
+
+
+@ARTICLE{Wiik2018-ve,
+  title     = "Generalized Additive Models of Climatic and Metabolic Controls
+               of Subannual Variation in {pCO} 2 in Productive Hardwater Lakes",
+  author    = "Wiik, E and Haig, H A and Hayes, N M and Finlay, K and Simpson,
+               G L and Vogt, R J and Leavitt, P R",
+  journal   = "Journal of Geophysical Research: Biogeosciences",
+  publisher = "Wiley Online Library",
+  volume    =  123,
+  number    =  6,
+  pages     = "1940--1959",
+  month     =  jun,
+  year      =  2018,
+  issn      = "2169-8953",
+  doi       = "10.1029/2018JG004506"
+}
+
+
+@ARTICLE{Finlay2015-bw,
+  title     = "Decrease in {CO2} efflux from northern hardwater lakes with
+               increasing atmospheric warming",
+  author    = "Finlay, Kerri and Vogt, Richard J and Bogard, Matthew J and
+               Wissel, Bj{\"o}rn and Tutolo, Benjamin M and Simpson, Gavin L
+               and Leavitt, Peter R",
+  journal   = "Nature",
+  publisher = "Nature Publishing Group",
+  volume    =  519,
+  number    =  7542,
+  pages     = "215--218",
+  month     =  mar,
+  year      =  2015,
+  language  = "en",
+  issn      = "0028-0836, 1476-4687",
+  pmid      = "25731167",
+  doi       = "10.1038/nature14172"
+}
+
+@ARTICLE{Augustin2012-sc,
+  title    = "On quantile quantile plots for generalized linear models",
+  author   = "Augustin, Nicole H and Sauleau, Erik-Andr{\'e} and Wood, Simon N",
+  journal  = "Computational statistics \& data analysis",
+  volume   =  56,
+  number   =  8,
+  pages    = "2404--2409",
+  month    =  aug,
+  year     =  2012,
+  keywords = "Model checking; Residuals; GAM; GLM; Zero-inflated Poisson",
+  issn     = "0167-9473",
+  doi      = "10.1016/j.csda.2012.01.026"
+}
+
+
+@ARTICLE{Simpson2007-ya,
+  title   = "Analogue Methods in Palaeoecology: Using the analogue Package",
+  author  = "Simpson, Gavin L",
+  journal = "Journal of statistical software",
+  volume  =  22,
+  number  =  2,
+  pages   = "1--29",
+  month   =  sep,
+  year    =  2007,
+  issn    = "1548-7660"
+}
+
+@ARTICLE{Goring2015-vf,
+  title   = "neotoma: A Programmatic Interface to the Neotoma Paleoecological
+             Database",
+  author  = "Goring, Simon and Dawson, Andria and Simpson, Gavin L and Ram,
+             Karthik and Graham, Russ W and Grimm, Eric C and Williams, John W",
+  journal = "Open Quaternary",
+  volume  =  1,
+  number  =  2,
+  pages   = "1--17",
+  year    =  2015,
+  doi     = "10.5334/oq.ab"
+}
+
