--- a/_posts/2017-03-21-simultaneous-intervals-for-derivatives-of-smooths.Rmd
+++ b/_posts/2017-03-21-simultaneous-intervals-for-derivatives-of-smooths.Rmd
@@ -15,6 +15,7 @@ tags:
 - "statistical modelling"
 active: blog
 category: R
+alert: "The post below makes use of the **tsgam** package, development of which has ceased. Instead, please use the new [**gratia** package](https://github.com/gavinsimpson/gratia), which replaces **tsgam** and is being actively developed. **tsgam** remains available from Github, but is not receiving any updates or bug fixes at this time. The code below should not need any major changes to work with **gratia**; if something isn't working however, please let me know."
 ---
 
 ```{r setup, echo = FALSE, include = FALSE, cache = FALSE}
