tweak the 404 yaml

--- a/404.md
+++ b/404.md
@@ -2,6 +2,7 @@
 layout: page
 title: 404
 subtitle: Page not found
+permalink: /404.html
 ---
 
 Ooops! Something's gone wrong and the page you were looking for doesn't seem to exist.
