--- a/slides/new-york-r-2020/new-york-r.Rmd
+++ b/slides/new-york-r-2020/new-york-r.Rmd
@@ -1033,7 +1033,7 @@ class: inverse center middle massive-subsection
 
 *mgcv* fits empirical Bayesian models with REML or ML smoothness selection
 
-Improper Gaussian priors &mdash; we can penalise the linear bits if the basis
+Improper Gaussian priors &mdash; we don't penalise the linear bits of the basis
 
 We can fit fully Bayesian models using *brms* with (almost) all the smooths from *mgcv*
 
