fix up some links to files in the presentation and add a compressed version of the pdf

--- a/slides/new-york-r-2020/new-york-r.Rmd
+++ b/slides/new-york-r-2020/new-york-r.Rmd
@@ -1187,4 +1187,4 @@ Pedersen *et al* (2019) *PeerJ*
 ### Slides
 
 * HTML Slide deck [bit.ly/nyr-gam](http://bit.ly/nyr-gam) &copy; Simpson (2020) [![Creative Commons Licence](https://i.creativecommons.org/l/by/4.0/88x31.png)](http://creativecommons.org/licenses/by/4.0/)
-* RMarkdown [Source](https://fromthebottomoftheheap.net/slides/new-york-r/new-york-r.Rmd)
+* RMarkdown [Source](https://github.com/gavinsimpson/fromthebottomoftheheap/tree/master/slides/new-york-r-2020)
