Fixing a few typos

--- a/slides/new-york-r-2020/new-york-r.Rmd
+++ b/slides/new-york-r-2020/new-york-r.Rmd
@@ -383,7 +383,7 @@ Splines are built up from basis functions
 
 Here I'm showing a cubic regression spline basis with 10 knots/functions
 
-We weight each basis function to get a spline. Here all the basisi functions have the same weight so they would fit a horizontal line
+We weight each basis function to get a spline. Here all the basis functions have the same weight so they would fit a horizontal line
 
 ---
 
@@ -977,7 +977,7 @@ m1 <- gam(list(neg_min ~ s(cyear, lake, bs = 'fs'),
 
 `bs = "fs"` is a factor-smooth interaction
 
-* like a ransom slope & intercept but for a spline
+* like a random slope & intercept but for a spline
 * one spline per `lake`
 * one smooth parameter
 
