code for paths was wrong

--- a/teaching/uregina/biol-266/added-n/index.Rmd
+++ b/teaching/uregina/biol-266/added-n/index.Rmd
@@ -162,12 +162,12 @@ sheets <- excel_sheets(path) %>%
 plants <- map(sheets, read_excel, path = path)
 ```
 ```{r fake-loading-data, eval = FALSE}
-sheets <- excel_sheets(path) %>%
+sheets <- excel_sheets("rn266data.xlsx") %>%
     set_names()
 plants <- map(sheets, read_excel, path = "rn266data.xlsx")
 ```
 
-We need to do a little cleaning of the data before we can cbine all the sheets into a single object for analysis. The data cleaning requires a couple of functions
+We need to do a little cleaning of the data before we can combine all the sheets into a single object for analysis. The data cleaning requires a couple of functions
 
 ```{r user-functions}
 ## fixes the sheet names to clean the up a bit 
