add post on random effects in GAMs

--- a/_biblio/blog-biblio.bib
+++ b/_biblio/blog-biblio.bib
@@ -1208,3 +1208,48 @@ In the present paper, the "principal axes" technique of factor analysis is appli
   issn    = "2296-701X",
   doi     = "10.3389/fevo.2018.00149"
 }
+
+
+@BOOK{Wood2017-qi,
+  title     = "{Generalized Additive Models}: An Introduction with {R}, Second
+               Edition",
+  author    = "Wood, Simon N",
+  publisher = "CRC Press",
+  month     =  may,
+  year      =  2017,
+  language  = "en",
+  isbn      = "9781498728379"
+}
+
+
+@BOOK{Molenberghs2000-vk,
+  title     = "Linear Mixed Models for Longitudinal Data",
+  author    = "Molenberghs, Geert and Verbeke, Geert",
+  publisher = "Springer, New York, NY",
+  year      =  2000,
+  isbn      = "9781441902993",
+  doi       = "10.1007/978-1-4419-0300-6"
+}
+
+@BOOK{Fahrmeir2013-xu,
+  title     = "Regression: Models, Methods and Applications",
+  author    = "Fahrmeir, L and Kneib, T and Lang, S and Marx, B",
+  publisher = "Springer Berlin Heidelberg",
+  year      =  2013,
+  isbn      = "9783642343322, 9783642343339",
+  doi       = "10.1007/978-3-642-34333-9"
+}
+
+@ARTICLE{Wood2013-gz,
+  title   = "A simple test for random effects in regression models",
+  author  = "Wood, Simon N",
+  journal = "Biometrika",
+  volume  =  100,
+  number  =  4,
+  pages   = "1005--1010",
+  month   =  dec,
+  year    =  2013,
+  issn    = "0006-3444",
+  doi     = "10.1093/biomet/ast038"
+}
+
