--- a/teaching/uregina/biol-266/2021/added-n/index.Rmd
+++ b/teaching/uregina/biol-266/2021/added-n/index.Rmd
@@ -28,7 +28,7 @@ To get started, open your web browser, head to [rstudio.cloud]() and log in usin
 Once you have logged in, start a **New Project** by clicking the button to the right of "Your Projects"
 
 ```{r show-new-project-image, echo=FALSE, out.width="800px"}
-knitr::include_graphics("../images/rstudio-cloud-new-project-annotated.png")
+knitr::include_graphics("./images/rstudio-cloud-new-project-annotated.png")
 ```
 
 After you click the button, **rstudio.cloud** will deploy a new RStudio instance, which may take a minute or two, so be patient.
@@ -36,7 +36,7 @@ After you click the button, **rstudio.cloud** will deploy a new RStudio instance
 Once the RStudio instance is running, rename your project by clicking on the "Untitled Project" label at the top of the screen. Give the project a useful name, such as "biol 266".
 
 ```{r show-rename-project-image, echo=FALSE, out.width="450px"}
-knitr::include_graphics("../images/rstudio-cloud-change-project-name-annotated.png")
+knitr::include_graphics("./images/rstudio-cloud-change-project-name-annotated.png")
 ```
 
 ## Opening a new script window
@@ -50,7 +50,7 @@ It is good practice to enter your R code into a R script. An R script is a plain
 To start a new script, go to the **File** menu, then select **New File** > **R Script**
 
 ```{r show-new-script-image, echo=FALSE, out.width="500px"}
-knitr::include_graphics("../images/rstudio-cloud-new-script.png")
+knitr::include_graphics("./images/rstudio-cloud-new-script.png")
 ```
 
 Or you can press <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>Alt</kbd> + <kbd>N</kbd> on Windows or <kbd>Cmd</kbd> + <kbd>Shift</kbd> + <kbd>Option</kbd> + <kbd>N</kbd> on a Mac.
@@ -58,7 +58,7 @@ Or you can press <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>Alt</kbd> + <kbd>N</k
 Your RStudio screen should look like this
 
 ```{r show-studio-cloud-image, echo=FALSE, out.width="750px"}
-knitr::include_graphics("../images/rstudio-cloud-screen-annotated.png")
+knitr::include_graphics("./images/rstudio-cloud-screen-annotated.png")
 ```
 
 ## Installing R Packages
@@ -108,19 +108,19 @@ From now on, enter the code in the shaded grey boxes into the **Script** window 
 Before we can work with the data from the experiment, we will need to upload them to our **rstudio.cloud** project. Make sure you have downloaded the `f21n2add.xlsx` file from UR Courses and that you have it somewhere on your local computer. Next, make sure the **Files** tab is selected in the lower right quarter of the application, and locate the **Upload** button
 
 ```{r show-studio-cloud-upload-button, echo=FALSE, out.width="750px"}
-knitr::include_graphics("../images/rstudio-cloud-screen-upload-button.png")
+knitr::include_graphics("./images/rstudio-cloud-screen-upload-button.png")
 ```
 
 Click the **Upload** button --- this will bring up the **Upload files** dialogue box
 
 ```{r show-studio-cloud-upload-dialog, echo=FALSE, out.width="350px"}
-knitr::include_graphics("../images/rstudio-cloud-screen-upload-dialog.png")
+knitr::include_graphics("./images/rstudio-cloud-screen-upload-dialog.png")
 ```
 
 Click the **Choose file** button --- this will bring up the file chooser on your computer. In the file chooser, navigate to where you saved the `f21n2add.xlsx` file and open it in the chooser so that the file is listed next to the **Choose file** button, as shown below
 
 ```{r show-studio-cloud-upload-dialog-filled, echo=FALSE, out.width="350px"}
-knitr::include_graphics("../images/rstudio-cloud-screen-upload-dialog-filled-added-n.png")
+knitr::include_graphics("./images/rstudio-cloud-screen-upload-dialog-filled-added-n.png")
 ```
 
 Once you have `f21n2add.xlsx` showing in the dialogue box, you can click **OK** to upload the file to **rstudio.cloud**.
@@ -128,7 +128,7 @@ Once you have `f21n2add.xlsx` showing in the dialogue box, you can click **OK** 
 When you have uploaded the file, your **Files** pane should list the `f21n2add.xlsx` file as shown below
 
 ```{r show-studio-cloud-upload-complete, echo=FALSE, out.width="350px"}
-knitr::include_graphics("../images/rstudio-cloud-screen-upload-complete-added-n.png")
+knitr::include_graphics("./images/rstudio-cloud-screen-upload-complete-added-n.png")
 ```
 
 ## Saving your work
@@ -136,13 +136,13 @@ knitr::include_graphics("../images/rstudio-cloud-screen-upload-complete-added-n.
 At this point, it is worth saving your script. Find the single disk icons in the main menu or the menu for your script
 
 ```{r show-studio-cloud-save-script, echo=FALSE, out.width="750px"}
-knitr::include_graphics("../images/rstudio-cloud-screen-save-script.png")
+knitr::include_graphics("./images/rstudio-cloud-screen-save-script.png")
 ```
 
 Click either of these icons to save the file. The first time you do this you'll be prompted to enter a file name --- use something memorable and be sure to give it the extension `.R`. In the image below I named my script `biol266-n-exp.R`.
 
 ```{r show-studio-cloud-save-dialog, echo=FALSE, out.width="350px"}
-knitr::include_graphics("../images/rstudio-cloud-screen-save-script-dialog.png")
+knitr::include_graphics("./images/rstudio-cloud-screen-save-script-dialog.png")
 ```
 
 Then click **Save**.
@@ -552,13 +552,13 @@ Working from `i3` then, we repeat some of the `emtrends()` and `emmeans()` code 
 To save a plot to a file, click on the **Plots** tab in the lower right window, and use the arrow icons to page through the plots to the one you want. Then click the **Export**
 
 ```{r show-studio-cloud-export-1, echo=FALSE, out.width="750px"}
-knitr::include_graphics("../images/rstudio-cloud-screen-export-button.png")
+knitr::include_graphics("./images/rstudio-cloud-screen-export-button.png")
 ```
 
 From the menu that appears choose **Save as Image...**
 
 ```{r show-studio-cloud-export-2, echo=FALSE, out.width="750px"}
-knitr::include_graphics("../images/rstudio-cloud-screen-export-image.png")
+knitr::include_graphics("./images/rstudio-cloud-screen-export-image.png")
 ```
 
 This brings up the **Save Plot as Image** dialogue box. Make the following changes:
@@ -570,7 +570,7 @@ This brings up the **Save Plot as Image** dialogue box. Make the following chang
     * Alternatively, you can use the hotspot to the bottom right corner of the plot to drag to resize. Click the *Update Preview* button to redraw the plot to the desired size
 
 ```{r show-studio-cloud-export-3, echo=FALSE, out.width="750px"}
-knitr::include_graphics("../images/rstudio-cloud-screen-export-image-dialog.png")
+knitr::include_graphics("./images/rstudio-cloud-screen-export-image-dialog.png")
 ```
 
 When you have made the required changes, click **Save**.
@@ -578,13 +578,13 @@ When you have made the required changes, click **Save**.
 To export saved images or your script to your local machine, select the **Files** tab in the lower right window
 
 ```{r show-studio-cloud-export-4, echo=FALSE, out.width="750px"}
-knitr::include_graphics("../images/rstudio-cloud-screen-export-files.png")
+knitr::include_graphics("./images/rstudio-cloud-screen-export-files.png")
 ```
 
 Check the boxes next to the files you wish to export (download) as shown above, and then click the **More** button in the menu and select the **Export...** option.
 
 ```{r show-studio-cloud-export-5, echo=FALSE, out.width="300px"}
-knitr::include_graphics("../images/rstudio-cloud-screen-export-files-dialog.png")
+knitr::include_graphics("./images/rstudio-cloud-screen-export-files-dialog.png")
 ```
 
 Enter a filename --- if you are exporting more than one file, *RStudio* will compress all the files into a single ZIP archive --- if needed, but the provided name should be OK. Then click **Download** to download the file or the ZIP archive.
@@ -596,13 +596,13 @@ Your work will be saved in your **rstudio.cloud** workspace for some time after 
 Locate your user name in the top right of the screen
 
 ```{r show-studio-cloud-logout-1, echo=FALSE, out.width="250px"}
-knitr::include_graphics("../images/rstudio-cloud-screen-logout-1.png")
+knitr::include_graphics("./images/rstudio-cloud-screen-logout-1.png")
 ```
 
 Click your user name to open the menu
 
 ```{r show-studio-cloud-logout-2, echo=FALSE, out.width="500px"}
-knitr::include_graphics("../images/rstudio-cloud-screen-logout-2.png")
+knitr::include_graphics("./images/rstudio-cloud-screen-logout-2.png")
 ```
 
 Click "Log out" to securely log out of **rstudio.cloud**.
