fix a typo in rat ranef post

--- a/_posts/2021-02-02-random-effects-in-gams.Rmd
+++ b/_posts/2021-02-02-random-effects-in-gams.Rmd
@@ -284,7 +284,7 @@ and now for the `gam()` version
 variance_comp(m2_gam)
 ```
 
-We could use the `anova()` method for `"gam"` fits but for fully penalized terms like random effects, the test isn't very good and *p* values can be badly biased. Wood (2017, p. 315) says of the test "As expected, the test if clearly useless for comparing models differing in [their] random effect structure."  So, maybe give this one a miss.
+We could use the `anova()` method for `"gam"` fits but for fully penalized terms like random effects, the test isn't very good and *p* values can be badly biased. Wood (2017, p. 315) says of the test "As expected, the test is clearly useless for comparing models differing in [their] random effect structure."  So, maybe give this one a miss.
 
 Using `AIC()` to compare the models is also an option:
 
