--- a/slides/index.Rmd
+++ b/slides/index.Rmd
@@ -25,9 +25,9 @@ talk_md <- function(title, where, doi, slidedeck, code){
   doi_md <- ifelse(is.na(doi), "",
     glue("<a href=\"http://doi.org/{doi}\"><span class=\"label label-warning\">{doi}</span></a>"))
   slides_md <- ifelse(is.na(slidedeck), "",
-    glue("<a href=\"{slidedeck}\"><span class='label label-warning'>Slide deck</span></a>"))
+    glue("<a href=\"{slidedeck}\"><span class='label label-success'>Slide deck</span></a>"))
   code_md <- ifelse(is.na(code), "",
-    glue("<a href=\"{slidedeck}\"><span class='label label-warning'>Code</span></a>"))
+    glue("<a href=\"{slidedeck}\"><span class='label label-info'>Code</span></a>"))
   glue("
 {title}
   ~ {where}
