--- a/slides/index.Rmd
+++ b/slides/index.Rmd
@@ -9,7 +9,7 @@ tags: []
 active: slides
 ---
 
-<div id="slides">
+<div class="slides">
 
 ```{r write-slides-info, echo = FALSE, results = "asis", message = FALSE, error = FALSE, warning = FALSE}
 library("readxl")
