update a few more talks meta data

--- a/slides/index.Rmd
+++ b/slides/index.Rmd
@@ -32,7 +32,7 @@ code_md <- ifelse(is.na(code), "",
   glue("<a href=\"{slidedeck}\"><span class='label label-info'>Code</span></a>"))
   
 recording_md <- ifelse(is.na(recording), "",
-    glue("<a href=\"{recording}\"><span class='label label-danger'>Recording</span></a>"))
+    glue("<a href=\"{recording}\"><span class='label label-inverse'>Recording</span></a>"))
 
 glue("
 {title}
